--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1,85 +1,19 @@
 /**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
+* Any CSS included here will be global. The classic template
+* bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
- * You can override the default Infima variables here. 
  */
 
-:root {
-  --h1-markdown: #021526;
-  --h2-markdown: #3a6d8c;
-  --h3-markdown: #474e93;
-  --h4-markdown: #508c9b;
-  --h5-markdown: #6a9ab0;
-  --h6-markdown: #888888;
-  --hx-markdown-underline: #eeeeee;
-  --secondary-blue-900: #001c63;
-  --sidebar-bg-color: #f3f4f6;
-  --secondary-blue-500: #3970fd;
-  --primary-blue-600: #1e56e3;
-  --base-neutral-0: #ffffff;
-  --primary-neutral-800: #1f2a37;
-  --ifm-menu-color-active: #1e56e3;
-  --primary-neutral-600: #4d5761;
-  --ifm-breadcrumb-color-active: var(--primary-neutral-600);
-  --ifm-link-color: #1e56e3;
-  --ifm-button-background-color: #2e8555;
-  --ifm-button-background-color-dark: #205d3b;
-  --ifm-hover-overlay: rgba(0, 0, 0, 0.05);
-  --brand-color: black;
-  --next-prev-border-color: #e5e7eb;
-  --ifm-color-emphasis-100: #f4f8fb;
-  --ifm-color-emphasis-0: #fff;
-  --ifm-color-primary: #1e56e3;
-  --ifm-background-surface-color: var(--ifm-color-white);
-  --ifm-menu-color: var(--ifm-color-gray-600);
-  --ifm-toc-link-color: var(--ifm-color-gray-600);
-  --ifm-code-font-size: 95%;
-  --ifm-toc-border-color: transparent;
-  --ifm-code-background: #e5ecff;
-  --ifm-code-color: #0087ff;
-  --ifm-color-content: #000e33;
-  --ifm-heading-line-height: 1.5;
-  --ifm-h1-font-size: 2.25rem;
-  --ifm-h2-font-size: 1.875rem;
-  --ifm-navbar-shadow: 0 1px 2px 0 #0000001a;
-  --ifm-navbar-search-input-background-color: var(--ifm-color-gray-100);
-  --ifm-navbar-search-input-color: var(--ifm-color-content);
-  --ifm-table-stripe-background: #efeff2;
-  --ifm-font-family-base: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
-    Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica,
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --ifm-font-family-monospace: 'IBM Plex Mono', SFMono-Regular, Menlo, Monaco,
-    Consolas, 'Liberation Mono', 'Courier New', monospace;
-}
+/* You can override the default Infima variables here. */
 
-/* Dak mode css */
 
-html[data-theme='dark'] {
-  --ifm-background-color: #111927;
-  --ifm-background-surface-color: var(--ifm-background-color);
-  --ifm-menu-color: var(--ifm-color-gray-200);
-  --ifm-toc-link-color: var(--ifm-color-gray-200);
-  --ifm-code-background: #001b66;
-  --ifm-color-content: var(--ifm-color-white);
-  --ifm-navbar-search-input-background-color: #001b66;
-  --ifm-table-stripe-background: #001242;
-  --ifm-navbar-search-input-placeholder-color: var(--ifm-color-gray-200);
-  --ifm-navbar-search-input-icon: url('data:image/svg+xml;utf8,<svg fill="%23C9C9CC" alt="Search" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" height="16px" width="16px"><path d="M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609,0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021,0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338,4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z" /></svg>');
+/* stylelint-disable docusaurus/copyright-header */
 
-  --ifm-hover-overlay: rgba(0, 0, 0, 0);
-  --ifm-color-primary: #1e56e3;
-  --secondary-blue-900: #c6d6ff;
-  --sidebar-bg-color: #161f36;
-  --primary-neutral-800: #c9c9cc;
-  --ifm-button-background-color: #25c2a0;
-  --ifm-button-background-color-dark: #2e8555;
-  --ifm-navbar-link-color: #9da4ae;
-  --brand-color: white;
-  --primary-neutral-600: #c4c4c4;
-  --next-prev-border-color: #293441;
-  --ifm-color-emphasis-100: #1d1e30;
-  --ifm-color-emphasis-0: #111f3b;
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
+.container > div > div:first-child {
+  padding: 1rem 5rem;
 }
 
 .docusaurus-highlight-code-line {
@@ -89,15 +23,59 @@ html[data-theme='dark'] {
   padding: 0 var(--ifm-pre-padding);
 }
 
-.table-of-contents {
-  font-size: 0.75rem;
+.breadcrumbs {
+  margin-bottom: 2rem;
 }
 
-h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
+.table-of-contents {
+  padding: var(--ifm-toc-padding-vertical) 0;
+}
+
+.table-of-contents li .table-of-contents__link {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.table-of-contents ul {
+  padding-left: 1.25rem;
+}
+
+.table-of-contents li {
+  margin: var(--ifm-toc-padding-vertical) var(--ifm-toc-padding-horizontal);
+  margin-left: 0;
+}
+
+.table-of-contents__link {
+  border-left: 0.125rem solid #0000;
+  font-size: 0.875rem;
+  padding-left: 1.25rem;
+  font-weight: 500;
+  color: var(--neutral-mid-400);
+}
+
+.table-of-contents__link--active {
+  border-left: 0.125rem solid var(--secondary-blue-400);
+  font-weight: 600;
+  margin-left: 0;
+}
+
+.table-of-contents__link:hover,
+.table-of-contents__link:hover code,
+.table-of-contents__link--active,
+.table-of-contents__link--active code {
+  color: var(--neutral-mid-0);
+}
+
+h1 {
   font-size: var(--ifm-h1-font-size);
   margin-bottom: 1.5rem;
 }
 
+.theme-doc-sidebar-item-link-level-1 .menu__link,
+.menu__link--sublist {
+  text-transform: uppercase;
+}
 .menu {
   background-color: var(--sidebar-bg-color);
 }
@@ -106,20 +84,56 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
 .menu * {
   line-height: 1.5;
   font-size: 0.7rem;
-  padding-left: 0.5rem;
   padding-bottom: 0;
-  text-transform: uppercase;
-  font-weight: 700;
+  padding-left: 0;
+  font-weight: 800;
   background: transparent !important;
+}
+
+.menu__link:hover {
+  color: var(--primary-blue-600);
 }
 
 .menu__list {
   border-bottom: 1px solid var(--next-prev-border-color);
 }
 
-.menu__list ul {
-  margin-left: 15px;
-  margin-right: 15px;
+.menu__list-item {
+  padding: 0.5rem 0;
+}
+
+/* Target specifically the link text */
+.menu__link {
+  white-space: normal !important;
+  word-break: break-word !important;
+  overflow-wrap: break-word !important;
+  width: 100% !important;
+  max-width: 100% !important;
+  padding-right: 1rem !important;
+}
+
+/* Target the container of menu items */
+.menu__list-item {
+  width: 100% !important;
+  padding-right: 0 !important;
+}
+
+/* Ensure the menu itself has proper width */
+.menu__list {
+  width: 100% !important;
+}
+
+/* Target the entire menu container */
+.theme-doc-sidebar-menu {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+
+@media (min-width: 997px) {
+  .menu_SIkG {
+    flex-grow: 1;
+    padding: 1rem !important;
+  }
 }
 
 .markdown > h2 {
@@ -161,12 +175,13 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
   height: auto;
 }
 
-.navbar__title {
-  font-size: 1.155rem;
+.navbar__item {
+  font-size: 0.875rem;
+  font-weight: 600;
 }
 
-.navbar__item {
-  font-size: 1rem;
+.navbar__brand {
+  font-size: 20px;
 }
 
 .navbar__link:hover,
@@ -189,6 +204,14 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
 
 .dropdown__link {
   color: var(--ifm-navbar-link-color);
+}
+
+.markdown {
+  --ifm-h1-vertical-rhythm-top: 3;
+  --ifm-h2-vertical-rhythm-top: 4.5;
+  --ifm-h3-vertical-rhythm-top: 2.5;
+  --ifm-heading-vertical-rhythm-top: 1.25;
+  --ifm-h1-vertical-rhythm-bottom: 1.25;
 }
 
 .header-github-link:hover {
@@ -277,11 +300,14 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
   line-height: normal;
 }
 
+.footer__item a{
+  line-height: 2;
+}
+
 .footer__icon {
   margin: 0;
   padding: 2px;
   color: #fff;
-  font-size: 1rem;
 }
 
 .footer__icon:before {
@@ -344,25 +370,46 @@ h1.docTitle_node_modules-\@docusaurus-theme-classic-src-theme-DocItem- {
 html[data-theme='dark'] .header-github-link:before {
   background: url(/img/icons/github.svg) no-repeat;
 }
+
 html[data-theme='dark'] .header-youtube-link:before {
   background: url(/img/icons/youtube-white.svg) no-repeat;
+}
+
+.markdown > button {
+  background: linear-gradient(90deg, #ff3600 0%, #ff8100 100%);
+  border: none;
+  border-radius: 5px;
+  padding: 16.8px 32px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.8s;
+  font-size: 16px;
+}
+
+.markdown > button:hover {
+  background: linear-gradient(90deg, #ff3600 30%, #ff8100 78%);
 }
 
 @media (max-width: 996px) {
   .navbar__item.github-button {
     display: none;
   }
+
   .github-button {
     margin: var(--ifm-menu-link-padding-vertical)
       var(--ifm-menu-link-padding-horizontal);
   }
+
   .navbar__item.youtube-button {
     display: none;
   }
+
   .youtube-button {
     margin: var(--ifm-menu-link-padding-vertical)
       var(--ifm-menu-link-padding-horizontal);
   }
+
   .center {
     text-align: center;
   }
@@ -372,12 +419,15 @@ html[data-theme='dark'] .header-youtube-link:before {
   .navbar__items--right > .navbar__item:not(:first-of-type) {
     margin-left: 0.25rem;
   }
+
   .github-button {
     margin-right: 0.5rem;
   }
+
   .youtube-button {
     margin-right: 0.5rem;
   }
+
   .hero__title {
     font-size: 2rem;
   }
@@ -387,9 +437,11 @@ html[data-theme='dark'] .header-youtube-link:before {
   .navbar__items--right > .navbar__item:not(:first-of-type) {
     margin-left: 1.5rem;
   }
+
   .github-button {
     margin-right: 0.5rem;
   }
+
   .youtube-button {
     margin-right: 0.5rem;
   }
@@ -399,22 +451,27 @@ html[data-theme='dark'] .header-youtube-link:before {
   .navbar__items--right > .navbar__item:not(:first-of-type) {
     margin-left: 0.5rem;
   }
+
   .github-button {
     margin-right: 0.5rem;
   }
+
   .youtube-button {
     margin-right: 0.5rem;
   }
 }
 
-h1 {
-  font-size: 1.75rem;
-  font-weight: 700;
+@media (max-width: 768px) {
+  .container > div > div:first-child {
+    padding: 1rem !important;
+  }
 }
-.Heading {
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-align: center !important;
+
+@media (min-width: 997px) and (max-width: 1327px) {
+  .container > div > div:first-child {
+    padding-left: 4rem !important;
+    padding-right: 4rem !important;
+  }
 }
 
 h1,
@@ -428,13 +485,12 @@ h6 {
 }
 
 p,
-textarea,
-li,
-.Heading div {
+textarea {
   margin-bottom: 1.25rem;
   color: var(--primary-neutral-800);
   font-size: 0.9375rem;
   line-height: 1.625rem;
+  text-align: left;
 }
 
 a {
@@ -443,10 +499,227 @@ a {
 }
 
 a:hover {
-  color: #86a7ef;
+  color: var(--secondary-blue-400);
+}
+
+.custom-image {
+  width: 140%;
+  padding: 10px;
+  opacity: 1;
+}
+
+.my-svg-icon path {
+  fill: var(--secondary-blue-900);
 }
 
 /* Hide external link svg on Navbar */
-.iconExternalLink_nPIU {
-  display: none !important;
+
+.navbar__item > svg,
+.navbar-sidebar svg {
+  position: absolute;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  overflow: hidden;
+}
+
+/* Homepage */
+.homepage {
+  width: 100%;
+  max-width: 100%;
+}
+
+/* Header Hero */
+.HeaderHero {
+  height: clamp(500px, 70vh, 800px);
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  margin-top: clamp(2rem, 15vh, 8rem);
+}
+
+.HeaderHero .title {
+  font-size: 3rem;
+  line-height: 1;
+  margin-bottom: 0 !important;
+  font-weight: 500;
+  left: -250px;
+  opacity: 1;
+}
+
+.HeaderHero .tagline {
+  font-size: 1.5rem;
+  line-height: 1.3;
+  font-weight: 500;
+  margin-top: -7px;
+  opacity: 1;
+  left: -250px;
+}
+
+.HeaderHero .description {
+  font-size: 1.2rem;
+  line-height: 1.3;
+  color: var(--primary-neutral-800);
+  opacity: 1;
+  text-align: center;
+  max-width: 70vw;
+}
+
+.HeaderHero .buttons {
+  margin-top: 40px;
+}
+
+/* Action Button */
+.ActionButton {
+  padding: 0.75rem 1.25rem;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: var(--ifm-button-font-weight);
+  text-decoration: none !important;
+  border-bottom: none;
+  transition: all 0.2s ease-out;
+  border-radius: 0.375rem;
+  margin-right: 10px;
+}
+
+.ActionButton.primary {
+  color: var(--base-neutral-0);
+  background-color: var(--ifm-button-background-color);
+  border: var(--ifm-button-border-width) solid var(--ifm-button-border-color);
+  white-space: nowrap;
+}
+
+.ActionButton.primary:hover {
+  background-color: #1cbb99;
+}
+
+.ActionButton.secondary {
+  color: #1c1e21;
+  background-color: #ebedf0;
+}
+
+.ActionButton.secondary:hover {
+  background-color: #c7c7c7;
+}
+
+.ActionButton.secondary::after {
+  content: '›';
+  font-size: 24px;
+  margin-left: 5px;
+}
+
+/* Section */
+.Section {
+  width: 100%;
+  padding: 50px 1.25rem 0;
+  overflow-x: hidden;
+  margin-bottom: 5rem;
+}
+
+.Section.tint {
+  background-color: var(--ifm-hover-overlay);
+}
+
+.Section.dark {
+  background-color: var(--dark);
+}
+/* Small Screens */
+@media only screen and (max-width: 480px) {
+  .ActionButton {
+    max-width: 100%;
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+  }
+  .ActionButton.secondary {
+    margin-top: 1rem;
+    margin-left: auto;
+  }
+  .custom-image {
+    width: 80%;
+    padding-top: 60px;
+  }
+}
+
+/* Small to Medium Screens */
+@media only screen and (max-width: 768px) {
+  .container > div > div:first-child {
+    padding: 1rem !important;
+  }
+  .center {
+    text-align: center;
+  }
+  .HeaderHero .title {
+    font-size: 60px;
+  }
+  .HeaderHero .tagline {
+    font-size: 30px;
+  }
+}
+
+/* Medium Screens */
+@media (min-width: 481px) and (max-width: 960px) {
+  .ActionButton {
+    max-width: 100%;
+    width: 100%;
+    display: block;
+    white-space: nowrap;
+  }
+  .ActionButton.secondary {
+    margin-top: 1rem;
+  }
+  .HeaderHero .ActionButton {
+    margin: auto;
+    margin-top: 1rem;
+  }
+  .HeaderHero {
+    margin-top: 2rem;
+  }
+  .Section {
+    margin-bottom: 2rem;
+    padding-top: 1rem;
+  }
+}
+
+/* Medium to Large Screens */
+@media (min-width: 997px) and (max-width: 1327px) {
+  .container > div > div:first-child {
+    padding-left: 4rem !important;
+    padding-right: 4rem !important;
+  }
+}
+
+/* Large Screens */
+@media (min-width: 1200px) {
+  .HeaderHero {
+    height: 500px;
+    overflow: hidden;
+  }
+}
+
+/* Responsive Navbar & Buttons */
+@media (max-width: 1149px) {
+  .navbar__items--right > .navbar__item:not(:first-of-type) {
+    margin-left: 0.25rem;
+  }
+  .github-button,
+  .youtube-button {
+    margin-right: 0.5rem;
+  }
+}
+
+@media (max-width: 996px) {
+  .navbar__item.github-button,
+  .navbar__item.youtube-button {
+    display: none;
+  }
+  .center {
+    text-align: center;
+  }
 }
